--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "api_security", "Conteneur-Flavien", "patricia"]
   pull_request:
-    branches: [ main ]
+    branches: [ "main", "api_security", "Conteneur-Flavien", "patricia"]
 
 jobs:
   build:
