--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install tensorflow-intel
         python -m pip install -r requirements.txt
         pip install fastapi[all]
         pip install pytest
