--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ opt-einsum==3.3.0
 packaging==23.2
 pandas==2.1.1
 passlib==1.7.4
+Pillow==10.1.0
 protobuf==4.24.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
